--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     </div>
     <div class="background_respuesta ocultar">
         <div class="container_respuesta">
-            <p class="respuesta">Tu edad es <span class="edad"></span></p>
-            <i class="fa-solid fa-person-cane icon"></i>
+            <p class="edad"><!-- Tienes <span class="edad"></span> años --></p>
+            <i class="icon"></i>
         </div>
     </div>
     <!-- 
         <i class="fa-solid fa-baby"></i>
         <i class="fa-solid fa-child"></i>
         <i class="fa-solid fa-person-cane"></i>
+        <i class="fa-regular fa-face-sad-tear"></i>
     -->
     <script src="script.js"></script>
 </body>
