--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="button" value="Saber mi edad" id="id_botonEdad">
     </div>
     <div class="background_respuesta ocultar">
+        <i class="fa-brands fa-x-twitter"></i>
         <div class="container_respuesta">
             <p class="edad"><!-- Tienes <span class="edad"></span> años --></p>
             <i class="icon"></i>
